...
  }

  let places: [FavoritePlace]
  var didSelect: (Place) -> Void = { _ in }
  var body: some View {
    VStack(alignment: .leading) {
      Text("Favorites").font(.headline)
        .padding(.horizontal)
      ScrollView(.horizontal) {
        HStack(alignment: .top, spacing: 12) {
          ForEach(Array(places.enumerated()), id: \.0) { idx, favoritePlace in
            Button(action: { didSelect(favoritePlace.asPlace) }) {
              VStack {
...
